--- a/english.html
+++ b/english.html
@@ -1141,7 +1141,23 @@ Error message and password prompt
 
 <li>Wishing star 01</li>
 
+<li>Wishing star 02</li>
+
+<li>Wishing star 03</li>
+
 <li>Wishing star 04</li>
+
+<li>Wishing star 05</li>
+
+<li>Wishing star 06</li>
+
+<li>Wishing star 07</li>
+
+<li>Wishing star 08</li>
+
+<li>Wishing star 09</li>
+
+<li>Wishing star 10</li>
 
 <li>Wishing star extension</li>
 
@@ -9017,7 +9033,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200324183914784" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200330122726628" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200330123851142" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9026,7 +9042,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="9-side-wishing-star [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9046,7 +9062,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200330121320973" title="$:/temp/search">
+<div created="20161023184814872" modified="20200330123009666" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12437,7 +12453,7 @@ I am too, even though I use [[public transportation|Public Transportation]], sti
 
 </pre>
 </div>
-<div created="20200212201643628" modified="20200325193701128" tags="[[How many songs can you even invent at all]] [[Hunky Dory]]" title="Music">
+<div created="20200212201643628" modified="20200330130203474" tags="[[How many songs can you even invent at all]] [[Hunky Dory]]" title="Music">
 <pre>[img[pictures/music.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Music]]&quot;&gt;&gt;
@@ -14706,12 +14722,94 @@ Sprinkle the roasted pine nuts on top. You can also sprinkle the chopped seasoni
 
  &lt;&lt;heblink [[כוכב המשאלות 01]]&gt;&gt;</pre>
 </div>
-<div created="20200212154809949" modified="20200212160231559" tags="9-side-wishing-star Laundry" title="Wishing star 04">
+<div created="20200330123021238" modified="20200330124818172" tags="9-side-wishing-star" title="Wishing star 02">
+<pre>
+[img[pictures/cochav-2.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 02]]&gt;&gt;
+
+</pre>
+</div>
+<div created="20200330123312227" modified="20200330123431007" tags="9-side-wishing-star" title="Wishing star 03">
+<pre>
+[img[pictures/cochav-3.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 03]]&gt;&gt;</pre>
+</div>
+<div created="20200212154809949" modified="20200330125527761" tags="9-side-wishing-star" title="Wishing star 04">
 <pre>[img[pictures/ela.jpg]]
 
 
 
  &lt;&lt;heblink [[כוכב המשאלות 04]]&gt;&gt;
+</pre>
+</div>
+<div created="20200330123817671" modified="20200330123927389" tags="9-side-wishing-star" title="Wishing star 05">
+<pre>
+[img[pictures/cochav-5.jpg]]
+
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 05]]&gt;&gt;
+
+</pre>
+</div>
+<div created="20200330124335239" modified="20200330124542355" tags="9-side-wishing-star" title="Wishing star 06">
+<pre>
+[img[pictures/cochav-6.jpg]]
+
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 06]]&gt;&gt;
+
+</pre>
+</div>
+<div created="20200330124908904" modified="20200330125138115" tags="9-side-wishing-star" title="Wishing star 07">
+<pre>
+[img[pictures/cochav-7.jpg]]
+
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 07]]&gt;&gt;
+</pre>
+</div>
+<div created="20200330125608066" modified="20200330125712040" tags="9-side-wishing-star" title="Wishing star 08">
+<pre>
+[img[pictures/cochav-8.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 08]]&gt;&gt;</pre>
+</div>
+<div created="20200330125715327" modified="20200330125931527" tags="9-side-wishing-star" title="Wishing star 09">
+<pre>
+[img[pictures/cochav-9.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 09]]&gt;&gt;
+
+</pre>
+</div>
+<div created="20200330130129862" modified="20200330130228040" tags="9-side-wishing-star" title="Wishing star 10">
+<pre>
+[img[pictures/cochav-10.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 10]]&gt;&gt;
+
 </pre>
 </div>
 <div created="20200308100936748" modified="20200308101052490" tags="[[Iry and Gura]]" title="Wishing star extension">
