--- a/index.html
+++ b/index.html
@@ -9198,7 +9198,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[עץ המשפחה של אווה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9218,7 +9218,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200330113708651" title="$:/temp/search">
+<div created="20161023184814872" modified="20200330122801550" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10619,7 +10619,7 @@ well,
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20200325193438670" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
+<div created="20171216194951924" modified="20200330130454093" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה]]:
@@ -14073,16 +14073,20 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Wishing star 01]]&gt;&gt;</pre>
 </div>
-<div created="20171029153626721" modified="20171204153847789" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 02">
+<div created="20171029153626721" modified="20200330123246213" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 02">
 <pre>[img[pictures/cochav-2.jpg]]
 
 //22 בדצמבר//
 
 כשהגעתי הם כבר התגוררו עשרה ימים בדירה. עוד לא הכול היה פתור, אבל כבר היה יפהפה ומסודר ונוח ומבהיק. [[גורה]] הייתה אחראית על האביזרים, שזה כולל מיטות, ספות, שטיחים, כלים לחדרי האמבטיה ולמטבח, וכרגיל הצטיינה במציאת מציאות בלתי רגילות באתרי בנייה או סתם ברחוב, ליד חנויות גדולות לממכר כלי עבודה למשל, או בקניית חפצים שווים וזולים במיוחד בשווקים. הגעתי אליהם לפנות בוקר של ה-22. הלכנו אליו ואז קצת הסתובבנו ברגל בשכונה שלו. עלינו למונמרטרה, ישבנו על המדרגות והבטנו על העיר, שהייתה מקושטת ומוארת לחג, וזה היה כל כך יפה לראות את זה מלמעלה. אחר כך המשכנו עוד קצת ועצרנו באחת המסעדות ואכלנו. [[ז'נבייב]] החליטה לסגור את המסעדה לעשרה ימים לחגים. אני הגעתי לארבעה ימים כולל ארוחת חג מולד בדירה החדשה והמפוארת עם כרטיס טיסה לעוד ארבעה ימים באירלנד. [[יויו]] היה עייף. הוא לא נח לרגע ימים רבים והיה מותש. גם אני הייתי עייפה. באחת בצהריים הלכנו לישון.
 
-</pre>
+
+
+
+
+&lt;&lt;englink [[Wishing star 02]]&gt;&gt;</pre>
 </div>
-<div created="20171029154117333" modified="20171205192333992" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 03">
+<div created="20171029154117333" modified="20200330123708925" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 03">
 <pre>[img[pictures/cochav-3.jpg]]
 
 //23 בדצמבר//
@@ -14102,9 +14106,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 שהרי איש קוֹל אתה – ממש חבורה שכזאת, יהיה שמח. לפי הספירה שלי מדובר בעשרים איש. בוא תראה לי רגע את הארונות. פסענו לכיוון הארונות, בדרך עצרנו ליד כל מיני חפצים תוך שיויו מסביר לי מאין הגיעו. את דלתות ארונות העץ הם צבעו בצבע לק כחול מלכותי ואת החלק הפנימי בלבן מבריק. שמרנו גם על שמנו הטוב, תראי, אומר לי החמוד, ומראה לי מגן דוד קטן שאלפרד צייר על המדף התחתון בכחול על הלבן. חזרנו לשבת.
 
 
-</pre>
+
+
+&lt;&lt;englink [[Wishing star 03]]&gt;&gt;</pre>
 </div>
-<div created="20161115182456203" modified="20200212154753141" tags="[[כוכב המשאלות בעל תשע הצלעות]] כביסה" title="כוכב המשאלות 04">
+<div created="20161115182456203" modified="20200330130608388" tags="[[כוכב המשאלות בעל תשע הצלעות]] כביסה" title="כוכב המשאלות 04">
 <pre>[img[pictures/ela.jpg]]
 
 
@@ -14156,9 +14162,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 חבשנו כובעים ולקחנו את הקפה, הכריכים והשמיכות וחזרנו לשבת סמוך [[לקליניקה|הקליניקה]]. 
 
 
-</pre>
+
+
+&lt;&lt;englink [[Wishing star 04]]&gt;&gt;</pre>
 </div>
-<div created="20171101163232985" modified="20171205133456235" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 05">
+<div created="20171101163232985" modified="20200330124101278" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 05">
 <pre>[img[pictures/cochav-5.jpg]]
 
 תגידי אווה, למה שלא תדברי קצת ואני אקשיב? בא לי לשתוק ולשמוע אותך.
@@ -14175,9 +14183,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 עד כאן הצלחת לדמיין?
 אימא'לה! אני מת!
 צחקתי בקול רם.
-</pre>
+
+
+
+
+&lt;&lt;englink [[Wishing star 05]]&gt;&gt;</pre>
 </div>
-<div created="20171102193448202" modified="20171205140331915" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 06">
+<div created="20171102193448202" modified="20200330124644362" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 06">
 <pre>[img[pictures/cochav-6.jpg]]
 
 זה סיפור עם נוף ציורי יויו יקר שלי. אבינו דר בבית שבו התגורר כל ימי חייו, להוציא שבע שנים שבהן חי עם אשתו הראשונה בבית שלימים הפך לבית שלנו, אותו בנו לו הוריו עוד בנישואיו הראשונים. ביתנו היה הבית האהוב על אבינו. לאחר שהוריו, שהיה בנם היחיד, הלכו לעולמם, הוא חזר לבית ילדותו עם פרלה, אשתו הראשונה, לה נישא כשהיה בן 22. היו להם שלושה בנים. פרלה הייתה עקרת בית למופת. לאחר שחזר לבית הוריו ביקשה פרלה להשאיר את הבית שלהם ריק למרות שלאחר מות הוריו עמד אבינו לשאת אישה שנייה. כשהיה בן 29 נישא לנורית, ממלא אחר בקשת הוריו, שלחצו עליו לשאת אישה נוספת, לאחר שפרלה שברה את האגן שנתיים קודם, ובנה לה בית חדש. הם רצו המשכיות למשפחתם ועודדו את אבי להביא לעולם צאצאים נוספים.
@@ -14191,23 +14203,37 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 סבלתי את האימהות החורגות שלי רק מתוך כבוד לאבא, כמו שאני סובלת את האחים החורגים מתוך כבוד למשפחה, אף על פי שלא כולם בלתי ראויים. חלקם ראויים ביותר והיו אחים נהדרים ואני אוהבת כמה מהם עד מאוד. אתה יכול רק לנסות ולדמיין כמה צאצאים נוספים נולדו מתוך עשרים וחמישה אחים ואחיות...? לא מעט, זה בטוח.
 אני חושב שיש לי הרבה מאוד שאלות אלייך. אבל שאלה ראשונה ברשותך אישה יקרה... זה חוקי הדבר הזה?
 זה היה במקום אחר שהיה בזמן אחר וכן, זה היה לגיטימי למרות שזה לא היה מקובל, ואבא הלך רחוק עם הלגיטימציה, ולשמחתי זה מאחוריי והיום אני גרה במקום אחר לגמרי, שוב קרובה לאבא, שכבר מלאו לו 92, וקרובה לאהרון, שבעוד שבוע ימלאו לו 60, וקרובה לאדית – עוד חצי אחות שלי, בתה של מלכה, אשתו השלישית של אבא, והיא בת גילי, וקרוב לניקי, האחות האחת לפני הצעירה ביותר מעשרים וחמישה בניו ובנותיו של אבינו ובתה של רחל, אשתו הצעירה ביותר והנפלאה ביותר שאהבה אותי ואני אותה. עם ניקי נפגשנו באיחור מה. יום אחד אצייר לך את [[עץ המשפחה שלי|עץ המשפחה של אווה]].
-</pre>
+
+
+
+
+
+
+&lt;&lt;englink [[Wishing star 06]]&gt;&gt;</pre>
 </div>
-<div created="20171105164236794" modified="20171217221846251" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 07">
+<div created="20171105164236794" modified="20200330125206334" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 07">
 <pre>[img[pictures/cochav-7.jpg]]
 
 זה סיפור עבות וצפוף כמו כמות עצים שמוח אחד לא יכול לדמיין בבת אחת, ולא יודעת כמה אספר לך ממנו ובטח לא עכשיו. עכשיו מה שעכשיו. [[אבינו]] לא התעסק איתנו יותר מדי, אבל מדי בוקר ברבע לשמונה היינו מתקבצים כולנו באמצע הנחלה, סמוך למקום שבו עובר הנחל ויש במה קטנה ורחבה מרוצפת וחורשת עצי מחט. אבא, שמצד אחד היה טיפוס ארטיסטי ומן הצד השני היה קשוח עד מפחיד, אסף את כולנו מדי בוקר באותה רחבה. יויו יקר שלי... אני עצמי עוד לא לגמרי יודעת איך לדבר על שמונה עשרה השנים הראשונות של חיי ולכן לא נוהגת לדבר עליהן. עוד אספר לך המון יויוקה ויש לי מספיק מה לספר גם אם לא אגיע בשלב זה לדברים שעדיין איני מסוגלת לדבר עליהם, אבל בינתיים אני רוצה לספר לך עוד דבר אחד מאותה נחלה. בבקרים באסיפה המשפחתית היה אבי עומד מולנו ועורך טקס לא ארוך, בו דבר ראשון איחל לכולנו בוקר טוב ואנחנו לו. אחריו הוא היה מנחה אותנו לנשימה נכונה משך כמה דקות. מביט לכל אחד ואחד מאיתנו לתוך העיניים. מסיים. מסתכל על כולנו ואומר: ועכשיו כל אחד מכם ילדיי היקרים יכול לבקש דבר מה אותו הוא מאחל לעצמו מכוכב המשאלות בעל תשע הצלעות. כל אחד מאיתנו דמם עם עצמו לדקה. ואז חייך אבינו חיוך גדול. הצמיד כפות ידיו זו לזו בהנאה, בירך את כולנו ליום מוצלח ופורה, ומשם המשכנו כל אחד אל משימותיו. 
 סיפור מקסים. לא נשמע אמיתי, אבל מקסים להקשיב לו. אני שומע אותך ומתרוממות לי הגבות מבפנים אווה. אני מביט בך ואני נדהם – איזה סיפור. תגידי... איפה נמצא הכוכב הזה? ותגידי... מאיפה את יודעת לאפות תגידי? ואיך ברחת בדיוק, ובדיוק ממה ומה עשית לפני שאפית? יש לי הרבה מאוד שאלות אלייך אווה... 
 כן, מובן. אתה יודע שכבר שבע? אגיד לך עכשיו בקצרה, המציאות עולה על כל דמיון. וכוכב המשאלות בעל תשע הצלעות הומצא בדמיון של אבינו היקר. אמרתי לו וחייכתי. אבא אהב לחשוב שמשם הגענו. יויו התפקע מצחוק אבל סימן לי עם היד שאמשיך לספר. המשכתי. [[את האפייה|אפייה]] למדתי [[במטבח|המטבח של הנחלה]] של הבית בחצר הענקית שלנו אז-שם. אהבתי להיות במטבח ואהבתי את הנשים שעבדו ואהבתי לעבוד איתן והן לימדו אותי הרבה דברים, אבל יותר מכול אהבתי את האופה שביניהן. זו שהכינה את כל העוגות והקינוחים והעוגיות והריבות והתרכיזים והפסטה וגם בישלה. היא כבר לא בין החיים. שמה היה [[איריס]] ומכאן שמה של [[בתי היחידה|איריס הבת]]. הוא חייך. חייכנו. 
-</pre>
+
+
+
+&lt;&lt;englink [[Wishing star 07]]&gt;&gt;</pre>
 </div>
-<div created="20171106141151303" modified="20171208162418039" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 08">
+<div created="20171106141151303" modified="20200330125832872" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 08">
 <pre>[img[pictures/cochav-8.jpg]]
 
 אני נזכרת בה כל יום כמעט [[באיריס|איריס]] ההיא. [[איריס שלי|איריס הבת]], תודה לאל, איתי. חוץ מזה... היה לי עסק שקשור, שים לב יויו שלי, לעיצוב פנים וחוץ. אבל איבדתי אותו ואחר כך המשכתי בין עבודות רבות. את אבא פגשתי שוב רק לפני חמש שנים, ולכן כפי שאתה יודע בשנה האחרונה חדלתי מלאפות בעבור שכר. לגבי אבא, הגיע רגע שנמאס לו והוא שחרר הכול. מכר את רוב מה שהיה לו, חילק את הון העתק בין כולם. הנשים שעדיין בחיים נשארו שם – גם הן קיבלו את שלהן מההון. לעצמו הוא לקח כמה שלקח וכעת כולנו גרים קרוב. כשברחתי, אבל אין לי כוח עכשיו לספר לך ממה ואיך, הגעתי מאוד במקרה לבית של זוג שהתגורר בארץ. עם סכום לא מבוטל אך לא גדול של מעות שהצלחתי לאסוף במשך כמה חודשים ברחתי הכי רחוק שהיה אפשר ואליהם הגעתי. ישבתי בבית קפה גדול שהשולחנות בו ממש קרובים זה לזה והתחלתי לאכול. הייתי בת 18. כעבור כמה דקות התיישב לידי [[זוג בני 60|ג'ו ונורמה]]. גבר ואישה נאי סבר ומראה ולבושים יפה. זה היה בשנות השמונים. תוך כדי שאכלתי והם הזמינו לעצמם התפתחה בינינו שיחה שהובילה לכך שהם הזמינו אותי לביתם ואצלם התחלתי את חיי החדשים. גם לי היה מזל גדול יויוקה, ולכן אינני מעזה להתלונן על מה שאין לי. הגבר, ששמו היה ג'ו, היה חלוץ מחשבים, ואשתו [[נורמה|סיפורים שסיפרתי לנורמה]] הייתה אדריכלית פנים וגינות. לשניהם היה תואר דוקטור במקצועות שלהם. היו להם שני בנים גדולים שלא גרו בבית, אנדרה ופיליפ. גרתי אצלם חמש שנים. ג'ו ונורמה נדלקו עליי ולקחו אותי תחת חסותם וכפרויקט. ג'ו לימד אותי מחשבים ועם נורמה היו לי שיחות ארוכות על עיצוב. די מהר עבדתי איתה שלושה ימים בכל שבוע. בשאר הזמן התחלתי ללמד את עצמי תוכנות עיצוב וללמוד באוניברסיטה הפתוחה. תוך שלוש שנים, ובעזרת ג'ו ונורמה, התחלתי לקבל עבודות. ידעתי טוב גננות וחקלאות ולבנות דברים. זה עוד דבר שהיה לי מהנחלה. פעמיים-שלוש בשבוע הגיע נגר אומן, אדם היה שמו. אדם משכיל וחביב שסבל [[מבעיית שתייה מודחקת|ריחות]]. הוא לימד את מי מבינינו שהתעניין, אבל בעיקר בנה ותיקן כל מה שנדרש לבתים. אהבתי לעבוד בנגרייה ולהקשיב לאדם ולדבר איתו, למדתי ממנו המון. גם [[רזיאל ורפאל]], שניים משלושת בניה של פרלה, בילו שם הרבה. אז ככה שהדברים שיחקו לטובתי. למדתי והתפתחתי וקיבלתי תמיכה ואהבה, אבל יום אחד כתבתי פתק והלכתי משם בלי להביט לאחור. זה קרה כי הייתי מאוהבת קשות בבנם הצעיר פיליפ, שהיה, כשהגעתי לשם, בן 30 ולמד בלונדון. לא יכולתי להתמודד עם זה. אנדרה, בנם הבכור, היה בן 36 אז. היו להם גם שלושה כלבים ושני חתולים. משפחה מעניינת בפני עצמה. בשנים שאחר כך היינו נפגשים שלושתנו לארוחות ערב בעיר מדי כמה חודשים ולאחר שנישאתי הפסקנו להיפגש. כמה שנים אחרי שהתגרשתי פגשתי אותם במקרה באיקאה, וזו הייתה שמחה עצומה ושוב התחלנו להתראות. לפני שש וחמש שנים בהתאמה הם הלכו לעולמם. ג'ו נפטר כשהיה בן 85, ונורמה כשהייתה בת 86. היו להם חיים יפים וטובים ובעצם פיליפ היה בנה של נורמה ואנדרה היה בנו של ג'ו ולא היו להם ילדים משותפים, וכשנפגשנו הם כבר חיו יחד עשר שנים. היה להם בית גדול למדי עם גינה לא קטנה. אני גידלתי בגינה ירקות ובישלתי ואפיתי לא מתוך חובה. הם עודדו אותי כל הזמן לצאת אך ללא הועיל. הם היו אנשים נפלאים שגם הבינו את מצבי כי סיפרתי להם הרבה על עברי. שלוש שנים אחרי שהגעתי אליהם התחלתי לעבוד ולהרוויח כסף. הם לא רצו ממני דבר וחסכתי כמעט כל מה שהרווחתי. בפיליפ התאהבתי ברגע שראיתי אותו. כל כך אהבתי את הפנים שלו. אהבתי את המבט שלו. אין לי מושג מה הוא הרגיש כלפיי, אי אפשר לדעת דברים כאלה לגבי האחר, אך ללא ספק מצאתי חן בעיניו. חייכתי והסמקתי עד קצות האוזניים. יויו חייך חיוך גדול וחיבק אותי ואמר שלא ישקוט עד שאסיים את הסיפור כולו. אם הייתי פוגשת אותו עכשיו בטח הייתי מתעלפת, אמרתי. בכל אופן, היו בינינו דברים, ביני ובין [[פיליפ]], זה קרה ארבע שנים וחצי אחרי שכבר גרתי שם, כשג'ו ונורמה נסעו לחופשה, ואני נשארתי. הוא הגיע בהפתעה ובילינו יחד ארבעה ימים משכרים ואחר כך כבר הכול נהיה בלגן, כי הייתה לו ארוסה, ואחרי שנסע בלעתי את כל הכאב בלי להראות או לדבר עליו. ג'ו ונורמה ראו אותי משתבשת... 
-</pre>
+
+
+
+
+
+&lt;&lt;englink [[Wishing star 08]]&gt;&gt;</pre>
 </div>
-<div created="20171107134423160" modified="20171217222031932" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 09">
+<div created="20171107134423160" modified="20200330130056870" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 09">
 <pre>[img[pictures/cochav-9.jpg]]
 
 אני מספרת [[ליויו|יויו]], הוא מחבק אותי, ואנחנו שומעים את הדלת נפתחת וקולות של דיבורים שקטים יחסית ומזוודות שמונחות על הרצפה ואת הדלת נסגרת. אנחנו מביטים זה בזה. אני אומרת לו שנמשיך כבר בהזדמנות, והוא אומר לי שהוא חייב לשמוע כל פרט ופרט ושאני מופלאה, ואני אומרת לו שלאט-לאט ואנחנו קמים ומולנו ניצבת חבורת מופלאים – [[גורה]] מחזיקה שקית המכילה בגטים, [[אירי]] עם תיקים, [[ודןדן|דןדן]], שאוחז בידיו עץ אשוח גדול למדי – יפים, צעירים ומחייכים. תגידו יפה שלום כולכם, יויו אומר, לוקח את העץ מדןדן ומניח אותו קרוב למרפסת. כבר היה שמונה בבוקר.
@@ -14223,9 +14249,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 ועוד שאלה גורל'ה, יש לכם מספיק כלי אוכל לארוחה?
 בטח איווי. קניתי בחנות כלבו ענקית של הכול ביורו שני תריסרים של כל הצלחות והכוסות והסכו&quot;ם שצריך פלוס צלחות וקערות הגשה פצצות ותבניות פיירקס לאפייה, כי ידעתי שתגיעי.
 את משהו גורוש.
-</pre>
+
+
+
+
+&lt;&lt;englink [[Wishing star 09]]&gt;&gt;</pre>
 </div>
-<div created="20171107201130057" modified="20171205192140584" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 10">
+<div created="20171107201130057" modified="20200330130338936" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 10">
 <pre>[img[pictures/cochav-10.jpg]]
 
 בשוק קנינו ירקות ופירות, גבינות ונקניקים. פטפטנו כל הזמן, חוץ [[מאירי|אירי]], שפה ושם השמיעה נהמה או גרגור או צחוק. פוסעת כמעט על קצות האצבעות אך כפותיה על האדמה. גווה ועורפה זקופים [[הולכים קדימה ולמעלה|שיטת אלכסנדר]], קוטפת לעצמה שקית מלאה תפוזים מאחד הדוכנים וטומנת אותה בתיק שעל גבו של [[דןדן]], ואחר כך פומלות ותפוחים ולימונים. אמרתי [[ליויו|יויו]] שאני רוצה לאפות. 
@@ -14243,7 +14273,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 הוא לא מפריע יותר לגורה בכלל, היא חולה על דןדן ולא מזיז לה כלום. גם קצת לא נעים לה ממנו. אין שום תעלומה, ואגב, באים איתו בחור ובחורה שפגש באחד מאינספור הקורסים שהוא תמיד לוקח, רציתי עוד אורחים. 
 ימים יפים. אני רוצה לאפות מתישהו הלילה, מה אתה אומר? 
 אני אחשוב על זה.
-</pre>
+
+
+
+
+&lt;&lt;englink [[Wishing star 10]]&gt;&gt;</pre>
 </div>
 <div created="20171109163744922" modified="20171217222057402" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 11">
 <pre>[img[pictures/cochav-11.jpg]]
