--- a/english.html
+++ b/english.html
@@ -1159,6 +1159,8 @@ Error message and password prompt
 
 <li>Wishing star 10</li>
 
+<li>Wishing star 11</li>
+
 <li>Wishing star extension</li>
 
 <li>With Yoyo in Amsterdam</li>
@@ -12453,7 +12455,7 @@ I am too, even though I use [[public transportation|Public Transportation]], sti
 
 </pre>
 </div>
-<div created="20200212201643628" modified="20200330130203474" tags="[[How many songs can you even invent at all]] [[Hunky Dory]]" title="Music">
+<div created="20200212201643628" modified="20200330132216947" tags="[[How many songs can you even invent at all]] [[Hunky Dory]]" title="Music">
 <pre>[img[pictures/music.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Music]]&quot;&gt;&gt;
@@ -13554,8 +13556,7 @@ We rejoiced and danced and sang and ate her magnificent [[semolina cake|Semolina
 </pre>
 </div>
 <div created="20200325193610921" modified="20200325193729377" tags="Music [[How many songs can you even invent at all]] [[Outer sisters]]" title="Sunny">
-<pre>
-[img[pictures/sunny.jpg]]
+<pre>[img[pictures/sunny.jpg]]
 
 
 
@@ -14723,8 +14724,7 @@ Sprinkle the roasted pine nuts on top. You can also sprinkle the chopped seasoni
  &lt;&lt;heblink [[כוכב המשאלות 01]]&gt;&gt;</pre>
 </div>
 <div created="20200330123021238" modified="20200330124818172" tags="9-side-wishing-star" title="Wishing star 02">
-<pre>
-[img[pictures/cochav-2.jpg]]
+<pre>[img[pictures/cochav-2.jpg]]
 
 
 
@@ -14735,8 +14735,7 @@ Sprinkle the roasted pine nuts on top. You can also sprinkle the chopped seasoni
 </pre>
 </div>
 <div created="20200330123312227" modified="20200330123431007" tags="9-side-wishing-star" title="Wishing star 03">
-<pre>
-[img[pictures/cochav-3.jpg]]
+<pre>[img[pictures/cochav-3.jpg]]
 
 
 
@@ -14752,8 +14751,7 @@ Sprinkle the roasted pine nuts on top. You can also sprinkle the chopped seasoni
 </pre>
 </div>
 <div created="20200330123817671" modified="20200330123927389" tags="9-side-wishing-star" title="Wishing star 05">
-<pre>
-[img[pictures/cochav-5.jpg]]
+<pre>[img[pictures/cochav-5.jpg]]
 
 
 
@@ -14762,8 +14760,7 @@ Sprinkle the roasted pine nuts on top. You can also sprinkle the chopped seasoni
 </pre>
 </div>
 <div created="20200330124335239" modified="20200330124542355" tags="9-side-wishing-star" title="Wishing star 06">
-<pre>
-[img[pictures/cochav-6.jpg]]
+<pre>[img[pictures/cochav-6.jpg]]
 
 
 
@@ -14772,8 +14769,7 @@ Sprinkle the roasted pine nuts on top. You can also sprinkle the chopped seasoni
 </pre>
 </div>
 <div created="20200330124908904" modified="20200330125138115" tags="9-side-wishing-star" title="Wishing star 07">
-<pre>
-[img[pictures/cochav-7.jpg]]
+<pre>[img[pictures/cochav-7.jpg]]
 
 
 
@@ -14781,8 +14777,7 @@ Sprinkle the roasted pine nuts on top. You can also sprinkle the chopped seasoni
 </pre>
 </div>
 <div created="20200330125608066" modified="20200330125712040" tags="9-side-wishing-star" title="Wishing star 08">
-<pre>
-[img[pictures/cochav-8.jpg]]
+<pre>[img[pictures/cochav-8.jpg]]
 
 
 
@@ -14791,8 +14786,7 @@ Sprinkle the roasted pine nuts on top. You can also sprinkle the chopped seasoni
  &lt;&lt;heblink [[כוכב המשאלות 08]]&gt;&gt;</pre>
 </div>
 <div created="20200330125715327" modified="20200330125931527" tags="9-side-wishing-star" title="Wishing star 09">
-<pre>
-[img[pictures/cochav-9.jpg]]
+<pre>[img[pictures/cochav-9.jpg]]
 
 
 
@@ -14802,13 +14796,23 @@ Sprinkle the roasted pine nuts on top. You can also sprinkle the chopped seasoni
 </pre>
 </div>
 <div created="20200330130129862" modified="20200330130228040" tags="9-side-wishing-star" title="Wishing star 10">
-<pre>
-[img[pictures/cochav-10.jpg]]
+<pre>[img[pictures/cochav-10.jpg]]
 
 
 
 
  &lt;&lt;heblink [[כוכב המשאלות 10]]&gt;&gt;
+
+</pre>
+</div>
+<div created="20200330132114274" modified="20200330132302849" tags="9-side-wishing-star" title="Wishing star 11">
+<pre>
+[img[pictures/cochav-11.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 11]]&gt;&gt;
 
 </pre>
 </div>
