--- a/index.html
+++ b/index.html
@@ -9198,7 +9198,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="" title="$:/StoryList">
+<div list="[[כוכב המשאלות בעל תשע הצלעות]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10619,7 +10619,7 @@ well,
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20200330130454093" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
+<div created="20171216194951924" modified="20200330132619677" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה]]:
@@ -14279,7 +14279,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Wishing star 10]]&gt;&gt;</pre>
 </div>
-<div created="20171109163744922" modified="20171217222057402" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 11">
+<div created="20171109163744922" modified="20200330132650277" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 11">
 <pre>[img[pictures/cochav-11.jpg]]
 
 //
@@ -14303,6 +14303,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 דןדן ואירי הבטיחו להיות איתי. 
 אני עוד רגע הולך [[לאבא שלי|ג'וזף אברואה]] ונגיע בשמונה עם [[דניאל]] [[ואנג'ליק|אנג'ליק]] שלומדים איתי, אלא אם כן אתם צריכים אותי לפני. הוא אמור לפגוש היום לראשונה את הבנות של [[ז'נבייב]], וגם אני. מזל [[שאחותי|דפני אברואה]] לא מגיעה בסוף... אלפרד אמר. 
 אנחנו מסודרים, בונבון, לך לנוח ותחזור עם ג'וזף וחבריך לקורס דיאגנוסטיקה, אני כבר נרגש לקראת הארוחה. אני מאושר, יויו אמר וחיבק את אלפרד. אלפרד נפרד מאיתנו והלך.
+
+
+
+
+
+&lt;&lt;englink [[Wishing star 11]]&gt;&gt;
 </pre>
 </div>
 <div created="20171109192724801" modified="20200215174506288" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 12">
