--- a/english.html
+++ b/english.html
@@ -1161,6 +1161,24 @@ Error message and password prompt
 
 <li>Wishing star 11</li>
 
+<li>Wishing star 12</li>
+
+<li>Wishing star 13</li>
+
+<li>Wishing star 14</li>
+
+<li>Wishing star 15</li>
+
+<li>Wishing star 16</li>
+
+<li>Wishing star 17</li>
+
+<li>Wishing star 18</li>
+
+<li>Wishing star 19</li>
+
+<li>wishing star 20</li>
+
 <li>Wishing star extension</li>
 
 <li>With Yoyo in Amsterdam</li>
@@ -9044,7 +9062,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="9-side-wishing-star [[Coen Sisters]]" title="$:/StoryList">
+<div list="9-side-wishing-star" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9234,7 +9252,7 @@ It isn't nice to see a shutdown radio station, but when you live here in the ghe
 
  &lt;&lt;heblink [[420]]&gt;&gt;</pre>
 </div>
-<div created="20200115163447032" modified="20200322163427054" tags="Metafiction [[The global village]]" title="9-side-wishing-star">
+<div created="20200115163447032" modified="20200330132603007" tags="Metafiction [[The global village]]" title="9-side-wishing-star">
 <pre>!!![[Eva]]:
 
 This is a story I wrote in the winter of 2016, it begins with visiting Yoyo and Gura in Paris, for the Christmas dinner 2015 
@@ -9244,6 +9262,8 @@ This is a story I wrote in the winter of 2016, it begins with visiting Yoyo and 
 
 //
 For everything there is a season, and a time for every matter under heaven//:
+
+Ecclesiastes 3:1
 
 coming soon as possible
 
@@ -12455,7 +12475,7 @@ I am too, even though I use [[public transportation|Public Transportation]], sti
 
 </pre>
 </div>
-<div created="20200212201643628" modified="20200330132216947" tags="[[How many songs can you even invent at all]] [[Hunky Dory]]" title="Music">
+<div created="20200212201643628" modified="20200330144341294" tags="[[How many songs can you even invent at all]] [[Hunky Dory]]" title="Music">
 <pre>[img[pictures/music.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Music]]&quot;&gt;&gt;
@@ -14813,6 +14833,95 @@ Sprinkle the roasted pine nuts on top. You can also sprinkle the chopped seasoni
 
 
  &lt;&lt;heblink [[כוכב המשאלות 11]]&gt;&gt;
+
+</pre>
+</div>
+<div created="20200330141051981" modified="20200330141210092" tags="9-side-wishing-star" title="Wishing star 12">
+<pre>
+[img[pictures/cochav-12.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 12]]&gt;&gt;</pre>
+</div>
+<div created="20200330142306296" modified="20200330142407689" tags="9-side-wishing-star" title="Wishing star 13">
+<pre>
+[img[pictures/cochav-13.jpg]]
+
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 13]]&gt;&gt;
+</pre>
+</div>
+<div created="20200330142537131" modified="20200330142649028" tags="9-side-wishing-star" title="Wishing star 14">
+<pre>
+[img[pictures/cochav-14.jpg]]
+
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 14]]&gt;&gt;
+</pre>
+</div>
+<div created="20200330142824077" modified="20200330142939132" tags="9-side-wishing-star" title="Wishing star 15">
+<pre>
+[img[pictures/cochav-15.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 15]]&gt;&gt;
+
+</pre>
+</div>
+<div created="20200330143109501" modified="20200330143208063" tags="9-side-wishing-star" title="Wishing star 16">
+<pre>
+[img[pictures/cochav-16.jpg]]
+
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 16]]&gt;&gt;
+
+</pre>
+</div>
+<div created="20200330143607603" modified="20200330143706593" tags="9-side-wishing-star" title="Wishing star 17">
+<pre>
+[img[pictures/cochav-17.jpg]]
+
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 17]]&gt;&gt;
+</pre>
+</div>
+<div created="20200330143854922" modified="20200330143947231" tags="9-side-wishing-star" title="Wishing star 18">
+<pre>
+[img[pictures/cochav-18.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 18]]&gt;&gt;
+</pre>
+</div>
+<div created="20200330144101887" modified="20200330144157566" tags="9-side-wishing-star" title="Wishing star 19">
+<pre>
+[img[pictures/cochav-19.jpg]]
+
+
+
+
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 19]]&gt;&gt;</pre>
+</div>
+<div created="20200330144307758" modified="20200330144405083" tags="9-side-wishing-star" title="wishing star 20">
+<pre>
+[img[pictures/cochav-20.jpg]]
+
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 20]]&gt;&gt;
 
 </pre>
 </div>
