wishing star more

--- a/english.html
+++ b/english.html
@@ -1179,6 +1179,24 @@ Error message and password prompt
 
 <li>wishing star 20</li>
 
+<li>Wishing star 21</li>
+
+<li>Wishing star 22</li>
+
+<li>Wishing star 23</li>
+
+<li>Wishing star 24</li>
+
+<li>Wishing star 25</li>
+
+<li>Wishing star 26</li>
+
+<li>Wishing star 27</li>
+
+<li>Wishing star 28</li>
+
+<li>Wishing star 29</li>
+
 <li>Wishing star extension</li>
 
 <li>With Yoyo in Amsterdam</li>
@@ -12475,7 +12493,7 @@ I am too, even though I use [[public transportation|Public Transportation]], sti
 
 </pre>
 </div>
-<div created="20200212201643628" modified="20200330144341294" tags="[[How many songs can you even invent at all]] [[Hunky Dory]]" title="Music">
+<div created="20200212201643628" modified="20200330151346680" tags="[[How many songs can you even invent at all]] [[Hunky Dory]]" title="Music">
 <pre>[img[pictures/music.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Music]]&quot;&gt;&gt;
@@ -14922,6 +14940,101 @@ Sprinkle the roasted pine nuts on top. You can also sprinkle the chopped seasoni
 
 
  &lt;&lt;heblink [[כוכב המשאלות 20]]&gt;&gt;
+
+</pre>
+</div>
+<div created="20200330144659075" modified="20200330144801981" tags="9-side-wishing-star" title="Wishing star 21">
+<pre>
+[img[pictures/cochav-21.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 21]]&gt;&gt;
+
+
+
+
+
+
+
+</pre>
+</div>
+<div created="20200330144925903" modified="20200330145028538" tags="9-side-wishing-star" title="Wishing star 22">
+<pre>
+[img[pictures/cochav-22.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 22]]&gt;&gt;
+</pre>
+</div>
+<div created="20200330145751448" modified="20200330145846203" tags="9-side-wishing-star" title="Wishing star 23">
+<pre>
+[img[pictures/cochav-23.jpg]]
+
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 23]]&gt;&gt;
+</pre>
+</div>
+<div created="20200330150030100" modified="20200330150146498" tags="9-side-wishing-star" title="Wishing star 24">
+<pre>
+[img[pictures/cochav-24.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 24]]&gt;&gt;
+
+
+
+</pre>
+</div>
+<div created="20200330150324931" modified="20200330150416791" tags="9-side-wishing-star" title="Wishing star 25">
+<pre>
+[img[pictures/cochav-25.jpg]]
+
+
+
+&lt;&lt;heblink [[כוכב המשאלות 25]]&gt;&gt;
+
+</pre>
+</div>
+<div created="20200330150520755" modified="20200330150645854" tags="9-side-wishing-star Laundry" title="Wishing star 26">
+<pre>
+[img[pictures/cochav-26.jpg]]
+
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 26]]&gt;&gt;</pre>
+</div>
+<div created="20200330150802486" modified="20200330150906822" tags="9-side-wishing-star" title="Wishing star 27">
+<pre>
+[img[pictures/cochav-27.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 27]]&gt;&gt;
+</pre>
+</div>
+<div created="20200330151056304" modified="20200330151152729" tags="9-side-wishing-star" title="Wishing star 28">
+<pre>
+[img[pictures/cochav-28.jpg]]
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 28]]&gt;&gt;
+</pre>
+</div>
+<div created="20200330151319122" modified="20200330151409807" tags="9-side-wishing-star" title="Wishing star 29">
+<pre>
+[img[pictures/cochav-29.jpg]]
+
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 29]]&gt;&gt;
 
 </pre>
 </div>
