--- a/index.html
+++ b/index.html
@@ -9198,7 +9198,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כוכב המשאלות בעל תשע הצלעות]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[עץ המשפחה של אווה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9218,7 +9218,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200330122801550" title="$:/temp/search">
+<div created="20161023184814872" modified="20200330152521215" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10619,7 +10619,7 @@ well,
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20200330151655497" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
+<div created="20171216194951924" modified="20200330152441886" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה]]:
@@ -14610,11 +14610,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Wishing star 25]]&gt;&gt;</pre>
 </div>
-<div created="20171129185758902" modified="20200330150708271" tags="[[כוכב המשאלות בעל תשע הצלעות]] כביסה" title="כוכב המשאלות 26">
+<div created="20171129185758902" modified="20200330152510628" tags="[[כוכב המשאלות בעל תשע הצלעות]] כביסה" title="כוכב המשאלות 26">
 <pre>[img[pictures/cochav-26.jpg]]
 
 
-בבוקר ביטלתי את כרטיסי הטיסה. בחצי הראשון של היום [[פיליפ]] ואני הלכנו לטייל בעיר. כשישבנו הוא אמר לי שהוא רוצה שלא אכעס שרק עכשיו הוא מספר לי, שבשבועות האחרונים הוא יצא עם אישה נחמדה בהחלט, שלא התאהב בה ושהפעם האחרונה שנפגשו הייתה לפני שבוע ושהוא בכל מקרה רצה להיפגש איתה ולהגיד לה בנימוס שהסיפור ביניהם נגמר ושהוא עומד לעשות את זה. אני יודע אותך אווה שלי, ואני יודע כמה סבלת וכמה את רגישה וכמה את חשדנית. חשוב לי להיות גלוי. אני לא אוהב את האישה ולא נעים לומר אך לא אחוש בחסרונה. אפגש איתה בבית קפה, הודעתי לה שניפגש לשעה. כבר כמה ימים שאני מתכנן לעשות את זה וקבעתי איתה את זה הבוקר כי רציתי שזה יהיה מאחוריי. אחרי שאסיים איתה אפגש עם אנדרה, אנחנו צריכים לדבר על כמה דברים. אני רוצה לתת לך שקט ואני רוצה שתסמכי עליי ושתביני, ומותר לך לשאול אותי כל מה שאת רוצה. הופתעתי ולא היה לי קל עם זה אך קיבלתי את דבריו בלי תלונות. הוא הלך לפגוש את האישה ששמה אנט ואחר כך את אנדרה, ואני הלכתי [[ליויו|יויו]]. כשהגעתי רק [[דןדן]] היה. הוא עשה כביסה. הכנו תה ולקחנו אותו לחדר השירות. קיפלנו ערימה ענקית וחילקנו את הבגדים למדפים המתאימים. המכונה עמדה לסיים את פעולתה וכך גם המייבש. דןדן נשכב בתוך סל הכביסה, ואני, ישובה על שטיחון ירוק כהה, נשענתי על המייבש. גורה ואירי היו אמורות לחזור מקונצרט ויויו גם הוא היה מחוץ לבית. הוא הביט בי ואני בו, חייכנו. היינו בשקט וכל אחד נדד עם מחשבותיו. נזכרתי בלילה שבו [[אדית]] ואני הלכנו לנחלה דרך השביל הראשי של השדות. עמד לרדת גשם והחלטנו לקצר ולחצות במעבר שליד הנחל ומשם ללכת עוד קצת עד לאחד השערים הצדדיים. הלכנו מהר ובחלק מהדרך רצנו. אדית חששה מאמה. היה כבר חשוך. בסיבוב של הנחל, ממש במעבר, עמדו זקופים, כפות ידיהם מונחות על חלציהם, שלושה מארבעת בניה המגודלים של נורית, אשתו השנייה של אבא. דוד הבכור, יעקב השני ושלמה, הבן הצעיר. רעמים וברקים החלו והם חסמו אותנו כך שלא יכולנו להמשיך. גשם חזק ירד והם תקפו אותנו ופגעו בנו. כל הסצנה חלפה בראשי ואני רואה את דןדן מביט בי ואני רואה בעיניו שהוא יודע את שחלף בראשי והוא רואה במבטי שאני יודעת שראה, והוא לוקח את כף ידי ואוחז בה וממשיך להביט בי ואומר שהוא לא יודע איך אבל לפעמים זה קורה לו וחיבק אותי. המכונות גמרו עבודתן וסיימנו לקפל את הבגדים שהתייבשו ולמלא מייבש אחרון לעת עתה.</pre>
+בבוקר ביטלתי את כרטיסי הטיסה. בחצי הראשון של היום [[פיליפ]] ואני הלכנו לטייל בעיר. כשישבנו הוא אמר לי שהוא רוצה שלא אכעס שרק עכשיו הוא מספר לי, שבשבועות האחרונים הוא יצא עם אישה נחמדה בהחלט, שלא התאהב בה ושהפעם האחרונה שנפגשו הייתה לפני שבוע ושהוא בכל מקרה רצה להיפגש איתה ולהגיד לה בנימוס שהסיפור ביניהם נגמר ושהוא עומד לעשות את זה. אני יודע אותך אווה שלי, ואני יודע כמה סבלת וכמה את רגישה וכמה את חשדנית. חשוב לי להיות גלוי. אני לא אוהב את האישה ולא נעים לומר אך לא אחוש בחסרונה. אפגש איתה בבית קפה, הודעתי לה שניפגש לשעה. כבר כמה ימים שאני מתכנן לעשות את זה וקבעתי איתה את זה הבוקר כי רציתי שזה יהיה מאחוריי. אחרי שאסיים איתה אפגש עם אנדרה, אנחנו צריכים לדבר על כמה דברים. אני רוצה לתת לך שקט ואני רוצה שתסמכי עליי ושתביני, ומותר לך לשאול אותי כל מה שאת רוצה. הופתעתי ולא היה לי קל עם זה אך קיבלתי את דבריו בלי תלונות. הוא הלך לפגוש את האישה ששמה אנט ואחר כך את אנדרה, ואני הלכתי [[ליויו|יויו]]. כשהגעתי רק [[דןדן]] היה. הוא עשה כביסה. הכנו תה ולקחנו אותו לחדר השירות. קיפלנו ערימה ענקית וחילקנו את הבגדים למדפים המתאימים. המכונה עמדה לסיים את פעולתה וכך גם המייבש. דןדן נשכב בתוך סל הכביסה, ואני, ישובה על שטיחון ירוק כהה, נשענתי על המייבש. גורה ואירי היו אמורות לחזור מקונצרט ויויו גם הוא היה מחוץ לבית. הוא הביט בי ואני בו, חייכנו. היינו בשקט וכל אחד נדד עם מחשבותיו. נזכרתי בלילה שבו [[אדית]] ואני הלכנו לנחלה דרך השביל הראשי של השדות. עמד לרדת גשם והחלטנו לקצר ולחצות במעבר שליד הנחל ומשם ללכת עוד קצת עד לאחד השערים הצדדיים. הלכנו מהר ובחלק מהדרך רצנו. אדית חששה מאמה. היה כבר חשוך. בסיבוב של הנחל, ממש במעבר, עמדו זקופים, כפות ידיהם מונחות על חלציהם, שלושה מארבעת בניה המגודלים של נורית, אשתו השנייה של אבא. דוד הבכור, יעקב השני ושלמה, הבן הצעיר. רעמים וברקים החלו והם חסמו אותנו כך שלא יכולנו להמשיך. גשם חזק ירד והם תקפו אותנו ופגעו בנו. כל הסצנה חלפה בראשי ואני רואה את דןדן מביט בי ואני רואה בעיניו שהוא יודע את שחלף בראשי והוא רואה במבטי שאני יודעת שראה, והוא לוקח את כף ידי ואוחז בה וממשיך להביט בי ואומר שהוא לא יודע איך אבל לפעמים זה קורה לו וחיבק אותי. המכונות גמרו עבודתן וסיימנו לקפל את הבגדים שהתייבשו ולמלא מייבש אחרון לעת עתה.
+
+
+
+
+
+&lt;&lt;englink [[Wishing star 26]]&gt;&gt;</pre>
 </div>
 <div created="20171130184918703" modified="20200330151032550" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 27">
 <pre>[img[pictures/cochav-27.jpg]]
@@ -17637,7 +17643,7 @@ May the lord bless your soul, I love you girl
 
 לשים לה את היד (עם כפפה) על הפנים, ולסובב.</pre>
 </div>
-<div created="20161218191604654" modified="20200330114042351" tags="[[הנחלה בה גדלתי]] ילדים סגירים" title="עץ המשפחה של אווה">
+<div created="20161218191604654" modified="20200330152524691" tags="[[הנחלה בה גדלתי]] ילדים סגירים" title="עץ המשפחה של אווה">
 <pre>[img[pictures/eva-garinit.jpg]]
 
 
